griglia per il campo minato, con bonus

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <header>
         <h1>Pronto per giocare!</h1>
         <h1><a href="#" class="btn" id="button">Play</a></h1>
+        <select id="difficolta">
+            <option value="Normale">Normale</option>
+            <option value="Difficile" >Difficile</option>
+            <option value="Ultra-difficile" >Ultra-Difficile</option>
+        </select>
     </header>
 
     <main>
